2008-01-01
"MyWord" added the readword function

2007-12-31
"MyWord" added the ReciteRecord class

2007-12-30
"MyWord" finished the ChooseBook function
2007-12-29
"MyWord" added the BookList class

2007-12-27
"MyWord" added the DictFile class

2007-12-23
Added the "Installer"

2007-12-22
Added the "addword"